reduce jar / jvm / docker image size